syntax = "proto3";

package postpb;

message Post {
    string id = 1;
    string user_id = 2;
    string topic = 3;
    string create_at = 4;
    string last_at = 5;
    int32 reply_num = 6;
    string status = 7;
}

message Comment {
    string id = 1;
    string user_id = 2;
    string post_id = 3;
    string content = 4;
    string create_at = 5;
    int32 floor = 6;
    string status = 7;
}

message Reply {
    string id = 1;
    string user_id = 2;
    string post_id = 3;
    string comment_id = 4;
    string content = 5;
    string create_at = 6;
    string reply_user_id = 7;
    int32 floor = 8;
    string type = 9;
}

message NewPostRequest {
    string user_id = 1;
    string topic = 2;
    string content = 3;
}

message NewCommentRequest {
    string user_id = 1;
    string post_id = 2;
    string content = 3;
}

message NewReplyRequest {
    string user_id = 1;
    string post_id = 2;
    string comment_id = 3;
    string content = 4;
    string reply_user_id = 5;
    string type = 6;
}

message EditPostRequest {
    string id = 1;
    string status = 2;
    string user_id = 3;
}

message DeleteCommentRequest {
    string id = 1;
    string user_id = 2;
}

message PostRequest {
    string id = 1;

}

message CommentRequest {
    string id = 1;
}

message CommentResponse {
    string id = 1;
    repeated Reply replies = 2;
}